[gd_scene load_steps=2 format=3 uid="uid://b651kviaunjn"]

[ext_resource type="Script" path="res://ui/constant_display/constant_display.gd" id="1_50n76"]

[node name="ConstantDisplay" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.396078)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_right = 79.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_50n76")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="ConstantLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Oxygen "

[node name="NegativeProgressBar" type="ProgressBar" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = -100.0
max_value = 0.0
value = -120.0
allow_greater = true
allow_lesser = true
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = ">|<"

[node name="PositiveProgressBar" type="ProgressBar" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 100.0
max_value = 200.0
value = 120.0
allow_greater = true
allow_lesser = true
show_percentage = false
